# axonos-signal-pipeline

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/axonos-pipeline-core/: Cargo.toml
crates/axonos-pipeline-core/src/: artifact.rs  boundary.rs  calibrate.rs  checksum.rs  classify.rs  decision.rs  dsp.rs  epoch.rs  error.rs  feature.rs  filter.rs  frame.rs  lib.rs  mask.rs  rate.rs
crates/axonos-pipeline-core/tests/: conformance.rs
crates/axonos-pipeline-core/tests/data/: vectors.rs
docs/: CALIBRATION.md  CLAIMS.md  DSP_SPEC.md  LIMITATIONS.md  PIPELINE_CONTRACT.md  PRIVACY_BOUNDARY.md  SAFETY_NOTES.md  VALIDATION_PLAN.md
fixtures/synthetic/: frame-0001.json
tools/: check_hygiene.py  gen_test_vectors.py  validate_vectors.py
vectors/: README.md  SHA256SUMS  pipeline-vectors-v0.1.0.json  pipeline-vectors-v0.2.4.json  pipeline-vectors-v0.3.0.json  pipeline-vectors-v0.6.0.json
