[workspace]
resolver = "2"
members = ["crates/axonos-pipeline-core"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/AxonOS-org/axonos-signal-pipeline"
authors = ["The AxonOS Project <connect@axonos.org>", "Denis Yermakou"]
